--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,9 +1,10 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --allow-env --allow-net --watch main.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "pg": "npm:pg@^8.13.1"
   }
 }
